[gd_scene load_steps=11 format=2]

[ext_resource path="res://Rooms/Pedestals/ItemPedestal.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Audio/item-obtained.wav" type="AudioStream" id=3]

[sub_resource type="CylinderMesh" id=4]
top_radius = 3.0
bottom_radius = 3.6
height = 2.4

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.513726, 0.34902, 0.121569, 1 )

[sub_resource type="CylinderShape" id=1]
radius = 3.0
height = 2.4

[sub_resource type="CylinderShape" id=2]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "float"
length = 6.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 2.6, 3, 3.4, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.1, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 1.5, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 0.1, 0 ) ]
}

[sub_resource type="CylinderShape" id=3]
radius = 12.0
height = 16.0

[node name="ItemPedestal" type="Spatial"]
script = ExtResource( 1 )

[node name="Pedestal" type="StaticBody" parent="."]

[node name="Model" type="MeshInstance" parent="Pedestal"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Pedestal"]
shape = SubResource( 1 )

[node name="Item" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="Model" type="MeshInstance" parent="Item"]

[node name="SpriteViewport" type="Viewport" parent="Item/Model"]
size = Vector2( 128, 128 )
transparent_bg = true
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="Item/Model/SpriteViewport"]
position = Vector2( 64, 64 )

[node name="PickupArea" type="Area" parent="Item"]

[node name="CollisionShape" type="CollisionShape" parent="Item/PickupArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item"]
autoplay = "float"
anims/RESET = SubResource( 7 )
anims/float = SubResource( 6 )

[node name="DetailsArea" type="Area" parent="Item"]

[node name="CollisionShape" type="CollisionShape" parent="Item/DetailsArea"]
shape = SubResource( 3 )

[node name="Details" type="Control" parent="Item"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Item/Details"]
margin_left = 30.0
margin_top = 30.0
margin_right = 410.0
margin_bottom = 215.0

[node name="Name" type="Label" parent="Item/Details/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 275.0
margin_bottom = 45.0
text = "Item Name"
valign = 1
max_lines_visible = 1

[node name="Effect" type="Label" parent="Item/Details/Panel"]
margin_left = 20.0
margin_top = 60.0
margin_right = 275.0
margin_bottom = 85.0
text = "Item effect"
valign = 1
max_lines_visible = 1

[node name="Description" type="Label" parent="Item/Details/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -80.0
margin_right = -20.0
margin_bottom = -20.0
text = "Item description"
autowrap = true
max_lines_visible = 3

[node name="Sprite" type="TextureRect" parent="Item/Details/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 84.0
texture = ExtResource( 2 )

[node name="ItemPedestalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
